# pyWrap

./: CMakeLists.txt  setup.cfg  setup.py.in
pyWrap/: __init__.py
pyWrap/animal/: __init__.py  animal.py  animal_greetings.py
pyWrap/person/: __init__.py
src/: animal.hpp  person.hpp  pyAnimal.cpp  pyPerson.cpp
