[metadata]
name = pyWrap
version = 0.0.1
author = David Angulo
author_email = angulo.davi@gmail.com
description = A test library using python boost
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dangulod/pyWrap
project_urls =
    Bug Tracker = https://github.com/dangulod/pyWrap/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
